--- a/car_maniacs_project/templates/carwebsite/base.html
+++ b/car_maniacs_project/templates/carwebsite/base.html
@@ -9,25 +9,69 @@
     <link rel="icon" href="http://vignette2.wikia.nocookie.net/cityville/images/9/99/Car_Inferno.png/revision/latest?cb=20120719005825">
 
     <title>CarManiacs {% block title %}How to Tango with Django!{% endblock %}</title>
-  
+    
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
-   
+  
+ <body>
+  
 
-<ul>
-<li><a href="{% url 'index' %}">Home</a></li>
-<li><a href="{% url 'news' %}">News</a></li>
-<li><a href="{% url 'manufacturers' %}">Manufacturers</a></li>
-<li><a href="{% url 'top_rated' %}">Users' favourites</a></li>
-<li><a href="{% url 'new_cars' %}">New Cars</a></li>
-<li><a href="{% url 'compare' %}">Compare</a></li>
-       {% if user.is_authenticated %}
-           <li><a href="{% url 'auth_logout' %}?next=/carwebsite/">Logout</a></li>
-       {% else %}
-            <li><a href="{% url 'registration_register' %}">Register Here</a></li>
-            <li><a href="{% url 'auth_login' %}">Login</a></li>
-       {% endif %}
-</ul>
+ <div class="wrap" >
+ <img src="/static/images/Car_Inferno.png"
+ </div>
+ <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/carwebsite/">CarManiacs</a>
+          
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'manufacturers' %}">Manufacturers</a></li>
+                <li><a href="{% url 'top_rated' %}">Users' favourites</a></li>
+                <li><a href="{% url 'new_cars' %}">New Cars</a></li>
+                <li><a href="{% url 'compare' %}">Compare</a></li>
+                    {% if user.is_authenticated %}
+                         <li><a href="{% url 'auth_logout' %}?next=/carwebsite/">Logout</a></li>
+                    {% else %}
+                        <li><a href="{% url 'registration_register' %}">Register Here</a></li>
+                        <li><a href="{% url 'auth_login' %}">Login</a></li>
+                    {% endif %}
+ 
 
-{% block body_block %}{% endblock %}
+              </ul>
+        </div>
+      </div>
+    </div>  
 
+
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+           <div>
+                {% block body_block %}
+				{% endblock %}
+                </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
