Mainly done the car viewing functionality

--- a/car_maniacs_project/templates/carwebsite/base.html
+++ b/car_maniacs_project/templates/carwebsite/base.html
@@ -22,7 +22,7 @@
   
 
  <div class="wrap" >
- <img src="/static/images/Car_Inferno.png"
+ <img src="/static/images/logo.gif"
  </div>
  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
