Better design.Side bar added

--- a/car_maniacs_project/templates/carwebsite/manufacturer.html
+++ b/car_maniacs_project/templates/carwebsite/manufacturer.html
@@ -5,7 +5,8 @@
 {% block title %}{{ manufacturer_name }}{% endblock %}
 
 {% block body_block %}
-    <h1>{{ manufacturer_name }}</h1>
+    <h1 style="color:white;">{{ manufacturer_name }}</h1>
+    <hr/>
     {% if manufacturer %}
         {% if models %}
         <ul class="list-group">
