--- a/car_maniacs_project/templates/carwebsite/base.html
+++ b/car_maniacs_project/templates/carwebsite/base.html
@@ -18,11 +18,10 @@
     <![endif]-->
   </head>
   
- <body>
+ <body style="background:url(/static/images/car.jpg) no-repeat top center fixed;">
   
 
  <div class="wrap" >
- <img src="/static/images/logo.gif"
  </div>
  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
@@ -38,7 +37,6 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'manufacturers' %}">Manufacturers</a></li>
                 <li><a href="{% url 'top_rated' %}">Users' favourites</a></li>
                 <li><a href="{% url 'new_cars' %}">New Cars</a></li>
                 <li><a href="{% url 'compare' %}">Compare</a></li>
@@ -55,6 +53,14 @@
       </div>
     </div>  
 
+<div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+        <strong>Manufacturers</strong><hr/>
+                {% block side_block %}
+				{% load carwebsite_extras %}
+				{% get_manufacturer_list manufacturer %}
+				{% endblock %}
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -65,6 +71,7 @@
         </div>
       </div>
     </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
