--- a/car_maniacs_project/templates/carwebsite/top_rated.html
+++ b/car_maniacs_project/templates/carwebsite/top_rated.html
@@ -5,11 +5,12 @@
 
 {% block body_block %}
 
-<h1>Favourite cars</h1>
+<h1 style="color:white;">Favourite cars</h1>
+ <hr/>
         {% if favourites %}
         <ul class="list-group">
                 {% for model in favourites %}
-                        <li class="list-group-item"><a href="{% url 'model' model.manufacturer.slug  model.slug %} ">{{model.title}}</a></li>
+                        <li class="list-group-item"><a href="{% url 'model' model.manufacturer.slug  model.slug %} ">{{model.title}} - average {{model.averageRatings}}</a></li>
                 {% endfor %}
                 </ul>
         {% else %}
