--- a/car_maniacs_project/templates/registration/login.html
+++ b/car_maniacs_project/templates/registration/login.html
@@ -7,7 +7,7 @@
 <form class="form-signin" role="form" method="post" action=".">
 {% csrf_token %}
 
-<h2 class="form-signin-heading">Please sign in</h2>
+<h2 class="form-signin-heading" style="color:white; ">Please sign in</h2>
 <input class="form-control" placeholder="Username" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
 <input type="password" class="form-control" placeholder="Password" id="id_password" name="password" type="password" required />
 
