--- a/car_maniacs_project/templates/registration/registration_form.html
+++ b/car_maniacs_project/templates/registration/registration_form.html
@@ -5,22 +5,22 @@
 <form role="form"  method="post" action=".">
                 {% csrf_token %}
 
-<h2 class="form-signin-heading">Sign Up Here</h2>
+<h2 class="form-signin-heading" style="color:white;">Sign Up Here</h2>
 
 <div class="form-group" >
- <p class="required"> <label for="id_username">Username:</label>
+ <p class="required" style="color:white;"> <label for="id_username">Username:</label>
      <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
 </div>
  <div class="form-group">
-    <p class="required"><label for="id_email">E-mail:</label>
+    <p class="required" style="color:white;"><label for="id_email">E-mail:</label>
         <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
  </div>
 <div class="form-group">
-    <p class="required"><label for="id_password1">Password:</label>
+    <p class="required" style="color:white;"><label for="id_password1">Password:</label>
         <input class="form-control" id="id_password1" name="password1" type="password" placeholder="Enter password" /></p>
 </div>
 <div class="form-group">
-    <p class="required"><label for="id_password2">Password (again):</label>
+    <p class="required" style="color:white;"><label for="id_password2">Password (again):</label>
  <input class="form-control" id="id_password2" name="password2" type="password" placeholder="Enter password again" /></p>
 </div>
 
