--- a/car_maniacs_project/templates/carwebsite/base.html
+++ b/car_maniacs_project/templates/carwebsite/base.html
@@ -36,8 +36,10 @@
           <a class="navbar-brand" href="/carwebsite/">CarManiacs</a>
           
         </div>
+		
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
+	
+	 <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'top_rated' %}">Users' favourites</a></li>
                 <li><a href="{% url 'new_cars' %}">New Cars</a></li>
                 <li><a href="{% url 'compare' %}">Compare</a></li>
@@ -64,7 +66,21 @@
 				{% endblock %}
 
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
+<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
+	{% csrf_token %}
+	Search for cars:<br>
+     <input class="form-control" type="text" name="query" id="query" />
+     <input class="btn btn-primary" type="submit" name="submit" value="Search" />
+</form>			
+		
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
+	{% csrf_token %}
+	Search for cars:<br>
+     <input class="form-control" type="text" name="query" id="query" />
+     <input class="btn btn-primary" type="submit" name="submit" value="Search" />
+</form>		
            <div>
                 {% block body_block %}
 				{% endblock %}
