Switching to 1-10 rating system

--- a/car_maniacs_project/templates/carwebsite/rate.html
+++ b/car_maniacs_project/templates/carwebsite/rate.html
@@ -37,6 +37,11 @@
 					<input type="radio" name="speed" value="3" /><span></span>
 					<input type="radio" name="speed" value="4" /><span></span>
 					<input type="radio" name="speed" value="5" /><span></span>
+					<input type="radio" name="speed" value="6" /><span></span>
+					<input type="radio" name="speed" value="7" /><span></span>
+					<input type="radio" name="speed" value="8" /><span></span>
+					<input type="radio" name="speed" value="9" /><span></span>
+					<input type="radio" name="speed" value="10" /><span></span>
 				</div>
 			</li>
 			<li class="list-group-item">
@@ -48,6 +53,11 @@
 					<input type="radio" name="acceleration" value="3" /><span></span>
 					<input type="radio" name="acceleration" value="4" /><span></span>
 					<input type="radio" name="acceleration" value="5" /><span></span>
+					<input type="radio" name="acceleration" value="6" /><span></span>
+					<input type="radio" name="acceleration" value="7" /><span></span>
+					<input type="radio" name="acceleration" value="8" /><span></span>
+					<input type="radio" name="acceleration" value="9" /><span></span>
+					<input type="radio" name="acceleration" value="10" /><span></span>
 				</div>
 			</li>
 			<li class="list-group-item">
@@ -59,6 +69,11 @@
 					<input type="radio" name="handling" value="3" /><span></span>
 					<input type="radio" name="handling" value="4" /><span></span>
 					<input type="radio" name="handling" value="5" /><span></span>
+					<input type="radio" name="handling" value="6" /><span></span>
+					<input type="radio" name="handling" value="7" /><span></span>
+					<input type="radio" name="handling" value="8" /><span></span>
+					<input type="radio" name="handling" value="9" /><span></span>
+					<input type="radio" name="handling" value="10" /><span></span>
 				</div>
 			</li>
 			<li class="list-group-item">
@@ -70,6 +85,11 @@
 					<input type="radio" name="security" value="3" /><span></span>
 					<input type="radio" name="security" value="4" /><span></span>
 					<input type="radio" name="security" value="5" /><span></span>
+					<input type="radio" name="security" value="6" /><span></span>
+					<input type="radio" name="security" value="7" /><span></span>
+					<input type="radio" name="security" value="8" /><span></span>
+					<input type="radio" name="security" value="9" /><span></span>
+					<input type="radio" name="security" value="10" /><span></span>
 				</div>
 			</li>
 			<li class="list-group-item">
