Search improved, some refinements done

--- a/car_maniacs_project/templates/carwebsite/manufacturer.html
+++ b/car_maniacs_project/templates/carwebsite/manufacturer.html
@@ -18,10 +18,10 @@
             {% endfor %}        
                 </ul>
         {% else %}
-                <strong>No models registered for this manufacturer.</strong>
+               <h3 style="color:white;">No models registered for this manufacturer.</h3>
         {% endif %}
     {% else %}
-         <strong>Manufacturer is not registered.</strong>  
+         <h3 style="color:white;">Manufacturer is not registered.</h3>  
     {% endif %}         
                 
 
