--- a/car_maniacs_project/templates/carwebsite/model.html
+++ b/car_maniacs_project/templates/carwebsite/model.html
@@ -78,10 +78,10 @@
                     
                 </ul>
         {% else %}
-                <strong>Model does not exist</strong>
+                <h3 style="color:white;">Model does not exist</h3>
         {% endif %}
     {% else %}
-         <strong>Manufacturer is not registered.</strong>  
+         <h3 style="color:white;">Manufacturer is not registered.</h3>  
     {% endif %}         
                 
 {% endblock %}
