--- a/car_maniacs_project/templates/carwebsite/base.html
+++ b/car_maniacs_project/templates/carwebsite/base.html
@@ -68,22 +68,24 @@
 				{% endblock %}
 
         </div>
-
+<!--
 <form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
 	{% csrf_token %}
 	Search for cars:<br>
      <input class="form-control" type="text" name="query" id="query" />
      <input class="btn btn-primary" type="submit" name="submit" value="Search" />
 </form>			
-		
+-->		
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
 	{% csrf_token %}
-	Search for cars:<br>
+	<h1 style="color:white;">Search for cars:</h1><br>
      <input class="form-control" type="text" name="query" id="query" />
      <input class="btn btn-primary" type="submit" name="submit" value="Search" />
 </form>		
            <div>
+           <br>
+           <br>
                 {% block body_block %}
 				{% endblock %}
                 </div>
